fix spacing

--- a/src/scss/components/_Promo.scss
+++ b/src/scss/components/_Promo.scss
@@ -4,6 +4,11 @@
   &--sub {
     background: linear-gradient(180deg, #FFFFFF 50%, map-get($brand-colors, 'purple-dark') 50%);
   }
+
+  padding-bottom: 68px !important;
+  @include media-breakpoint-up (md) {
+    padding-bottom: 96px !important;
+  }
 }
 
 .Promo {
